k8s/network/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
  namespace: default
spec:
  gatewayClassName: traefik
  listeners:
  - name: audio-to-text
    port: 8080
    protocol: HTTP
    allowedRoutes:
      kinds:
      - kind: HTTPRoute
  
  - name: input-extraction
    port: 8081
    protocol: HTTP
    allowedRoutes:
      kinds:
      - kind: HTTPRoute
        
  - name: sync-manager
    port: 8082
    protocol: HTTP
    allowedRoutes:
      kinds:
      - kind: HTTPRoute
        
  - name: text-synthesizer
    port: 8083
    protocol: HTTP
    allowedRoutes:
      kinds:
      - kind: HTTPRoute
