k8s/network/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /audio-to-text
        pathType: Prefix
        backend:
          service:
            name: audio-to-text-service
            port:
              number: 8080
  
  - http:
      paths:
      - path: /input-extraction
        pathType: Prefix
        backend:
          service:
            name: input-extraction-service
            port:
              number: 8081

  - http:
      paths:
      - path: /sync-manager
        pathType: Prefix
        backend:
          service:
            name: sync-manager-service
            port:
              number: 8082

  - http:
      paths:
      - path: /text-synthesizer
        pathType: Prefix
        backend:
          service:
            name: text-synthesizer-service
            port:
              number: 8083
